--- a/examples/css-flexbox/index.html
+++ b/examples/css-flexbox/index.html
@@ -23,10 +23,12 @@
 
     .container {
       /* TODO */
+display:flex;
     }
 
     .left {
       /* TODO */
+order:-1;
     }
 
     .content {
@@ -40,6 +42,8 @@
     .left,
     .right {
       /* TODO */
+flex-shrink:0;
+flex-basis:200px;
     }
 
   </style>
