--- a/examples/svg/index.html
+++ b/examples/svg/index.html
@@ -10,6 +10,10 @@
   <style>
 
     /* TODO: Add hover effect for nodes - scale them up to 150% (with transition). */
+.node:hover, .node:hover + text {
+transform: scale(1.5);
+transition: all .3s;
+}
 
   </style>
 </head>
