--- a/examples/bootstrap/index.html
+++ b/examples/bootstrap/index.html
@@ -8,6 +8,7 @@
   <title>Bootstrap</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css"> -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
 </head>
 
 <body>
@@ -24,8 +25,11 @@
 
   <div class="container">
     <!-- TODO: Style the error message using Bootstrap classes only. -->
-    <div class="TODO">
+    <div class="alert alert-danger close">
       The e-mail you entered doesn't match our records.
+<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <span aria-hidden="true">&times;</span>
+</button>
     </div>
   </div>
 
@@ -34,21 +38,27 @@
     <div class="row">
 
       <!-- TODO: Add Bootstrap classes for #content and #sidebar to create one-column layout. -->
-      <div class="TODO" id="content">
+      <div class="col-sm-6" id="content">
         <h1 class="page-header">Login</h1>
 
         <!-- TODO: Style the form using Bootstrap. Do not forget to highlight the invalid input. -->
         <form>
-          <label for="email">Email</label>
-          <input type="text" name="email" id="email" value="invalid@email.com" class="TODO">
-          <label for="pass">Password</label>
-          <input type="password" name="pass" id="pass" class="TODO">
-          <input type="submit" name="login" class="TODO" value="Login">
+          <div class="form-group  has-error">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email" value="invalid@email.com" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="pass">Password</label>
+            <input type="password" name="pass" id="pass" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="submit" name="login" class="btn btn-primary" value="Login">
+          </div>
         </form>
 
       </div>
 
-      <div class="TODO" id="sidebar">
+      <div class="col-sm-6" id="sidebar">
         <h2>This is sidebar</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <img src="kitten.jpg" alt="responsive image" class="img-responsive" />
@@ -60,6 +70,7 @@
   </div>
   <!-- end container -->
 
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
